# tensorshell

./: README.md  stack.yaml  tensorshell.cabal
.stack-work/install/x86_64-osx/lts-8.18/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  alex-3.2.1  c2hs-0.28.1  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  cpphs-1.20.5-ItOOodR0Hps3mzfwh8D28y  data-default-0.7.1.1-7EGYJX2YWqWJRbPFUHNoCr  data-default-instances-containers-0.0.1-bob6IQGdJq92c061H46zK  data-default-instances-dlist-0.0.1-FKnZBeovJMk4M89wQxDhjl  data-default-instances-old-locale-0.0.1-9zaGDEmgOixKkmLylWdN5l  fgl-5.5.3.1-BBO2AKBsFGnFCFJiVxJiz  happy-1.19.5  haskell-src-exts-1.18.2-F2dYyBmVdIP3Ih9SOoUb1b  hostname-1.0-LHxcvBDHWay1RGMj1Uzenf  language-c-0.5.0-4dUSFwE7tnf2W5L6wxkx61  lens-family-1.2.1-H3QnwT59h8d8C3X6ZshwKx  lens-family-core-1.2.1-LZ6TX4t6mGs5hzfIChMtCb  lens-labels-0.1.0.1-Q0uUvbfqk2SutVdyAhlI  mainland-pretty-0.4.1.4-LiaJLCcQQPI5BGTxjoU5uN  polyparse-1.12-Ee2dhxWFCj0JUfsZIQidEE  proto-lens-0.2.1.0-3dfCX951sMn8dycj3XOSWp  proto-lens-descriptors-0.2.1.0-7OXUD82UhF6KIw0DvXDeY  proto-lens-protoc-0.2.1.0-7VRIgKsDY9FLA5QatJVzRD  snappy-0.2.0.2-JmBPG2tqLTy4WK0LWtFxMV  snappy-framing-0.1.1-4Cl1hKYhXACDUW16nJAMDx  srcloc-0.5.1.1-K8ZQqIdLoz6L4tgHw0V5x6  syb-0.6-IcoSwlPi2Nx4zSqMmorFPS  tensorflow-0.1.0.2-3N19JfNAE61EuAhMeGwPYO  tensorflow-core-ops-0.1.0.0-Bv5ftdNxW3f7r5AX5Ws7Y5  tensorflow-logging-0.1.0.0-L4nGHUtpN0l44Jv6wLflPh  tensorflow-opgen-0.1.0.0-3FruOqti8YZEl1RlxdGIgS  tensorflow-ops-0.1.0.0-FtZmmEKf1Cp330uzVreAPf  tensorflow-proto-0.1.0.0-JGcANuwHn1v25JpaVZD9ZL  tensorflow-records-0.1.0.0-5Fo56Ud4AGN8feZS1Rp4qU  tensorflow-records-conduit-0.1.0.0-F9F1ZNBcB1k8sLWMp3wZe4  tensorflow-test-0.1.0.0-35I99PA9cIPJTTXmmUNV4d  tensorshell-0.1.0.0-3AFERlvBpt9Huii2cfI2nk  tensorshell-0.1.0.0-HpHrlCe067s9UUwjGOjswR  tensorshell-0.1.0.0-KcYKhuPNkUz9Qc3C77Ogex  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7
.stack-work/install/x86_64-osx/lts-8.18/8.0.2/pkgdb/: package.cache  (+12 more)
src/: RegTest.hs
(+115 files in other folders)
