name:                tensorshell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tensorshell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       HUnit >= 1.5.0.0
                     , base >= 4.7 && < 5
                     , random >= 1.1
                     , tensorflow
                     , tensorflow-core-ops
                     , tensorflow-logging
                     -- , tensorflow-mnist
                     -- , tensorflow-mnist-input-data
                     , tensorflow-ops
                     , tensorflow-opgen
                     , tensorflow-proto
                     , tensorflow-records
                     , tensorflow-records-conduit
                     , tensorflow-test

  default-language:    Haskell2010

executable tensorshell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       HUnit >= 1.5.0.0
                     , base
                     , random >= 1.1
                     , tensorshell
  default-language:    Haskell2010

test-suite tensorshell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HUnit >= 1.5.0.0
                     , base
                     , random >= 1.1
                     , tensorshell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tensorshell
